# cq

./: .env.example  .gitbook-branch-readme.md  .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  SUMMARY.md  architecture.md  docker-compose.yml  index.md  install.md  marketplace.json  node-discovery-protocol.md  quickstart.md  ruff.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: python.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/plugin/: marketplace.json
.github/workflows/: ci-cli.yaml  ci-go-cli.yaml  ci-go-licenses.yaml  ci-go-sdk.yaml  ci-install.yaml  ci-licenses.yaml  ci-plugin.yaml  ci-prompts-sync.yaml  ci-python-sdk.yaml  ci-schema.yaml  ci-sdk-go-postgres.yaml  ci-sdk-go.yaml  ci-sdk-python.yaml  ci-server-embeddings.yaml  ci-server.yaml  ci-skill-sync.yaml  ci.yml  docs.yaml  docs.yml  release-cli.yaml  release-go-cli.yaml  release-python-sdk.yml  release-schema.yaml  release-sdk-python.yaml  release-server-image.yaml  validate-cli-release.yaml  validate-goreleaser.yaml
.plugin/: plugin.json
cli/: .goreleaser.yaml  DEVELOPMENT.md  Makefile  NOTICE  README.md  go.mod  go.sum  install_test.go  main.go  main_test.go
cli/cmd/: approve.go  approve_test.go  auth.go  auth_key.go  auth_key_test.go  auth_test.go  cli.go  cli_test.go  cmd_test.go  confirm.go  confirm_test.go  drain.go  drain_test.go  flag.go  flag_test.go  hook.go  hook_test.go  install.go  install_test.go  mcp.go  prompt.go  prompt_test.go  propose.go  propose_test.go  query.go  query_test.go  status.go  status_test.go
cli/mcpserver/: confirm.go  confirm_test.go  doc.go  e2e_test.go  flag.go  flag_test.go  propose.go  propose_test.go  query.go  query_test.go  server.go  server_test.go  status.go  status_test.go
docs/: CQ-Proposal.md  CRAIC-Proposal.md  SUMMARY.md  architecture.md  install.md  node-discovery-protocol.md  quickstart.md
docs/plans/: 2026-03-04-craic-mvp-poc-design.md
plugin/: README.md
plugins/codex/: scripts
plugins/copilot/: plugin.json
plugins/cq/: .pre-commit-config.yaml  README.md  pyproject.toml
plugins/cq/.claude-plugin/: plugin.json
plugins/cq/commands/: cq-reflect.md  cq-status.md  reflect.md  status.md
plugins/cq/hooks/cursor/: cq_cursor_hook.py
plugins/cq/scripts/: bootstrap.json  bootstrap.py  cq_binary.py
plugins/cq/server/: pyproject.toml
plugins/cq/server/cq_mcp/: knowledge_unit.py  local_store.py  server.py  team_client.py
plugins/cq/server/tests/: test_knowledge_unit.py  test_local_store.py  test_server.py  test_team_client.py
plugins/cq/skills/cq/: SKILL.md
plugins/cq/skills/reflect/: SKILL.md
plugins/cq/skills/status/: SKILL.md
plugins/cq/tests/: conftest.py  test_bootstrap.py  test_cq_binary.py  test_cursor_hook.py
schema/: Makefile  README.md  confirm.json  doc.go  embed.go  embed_test.go  flag.json  go.mod  health.json  knowledge_unit.json  node_discovery.json  node_discovery_test.go  propose.json  query.json  review.json  scoring.json  scoring.values.json  stats.json  values.go  values_test.go
schema/fixtures/: duplicate-flag.json  extensions-unit.json  flagged-unit.json  minimal-unit.json  node_discovery_invalid_version.json  node_discovery_minimal.json  node_discovery_split.json  valid-unit.json
schema/python/: Makefile  README.md  pyproject.toml
schema/python/src/cq_schema/: __init__.py
schema/python/tests/: test_cq_schema.py
scripts/: _install-common.sh  check_docs.py  install-cursor.sh  install-opencode.sh  install.ps1  lint-frontend.sh  lint-python-component.sh  migrate-v1.sh  migrate-v1_test.sh  prepare_gitbook_site.py  seed-users.py  test-install-opencode.sh  test_prepare_gitbook_site.py
scripts/install/: pyproject.toml
scripts/install/src/cq_install/: __init__.py  __main__.py  binary.py  cli.py  common.py  content.py  context.py  manifest.py  opencode_commands.py  pi_commands.py  runtime.py
scripts/install/src/cq_install/hosts/: __init__.py  base.py  claude.py  codex.py  cursor.py  opencode.py  pi.py  windsurf.py
scripts/install/tests/: conftest.py  test_binary.py  test_cli.py  test_common_copy.py  test_common_file.py  test_common_hooks.py  test_common_json.py  test_common_markdown.py  test_common_symlink.py  test_context.py  test_hosts_claude.py  test_hosts_codex.py  test_hosts_cursor.py  test_hosts_opencode.py  test_hosts_pi.py  test_hosts_registry.py  test_hosts_windsurf.py  test_opencode_commands.py  test_pi_commands.py
scripts/seed/: load.py
sdk/go/: DEVELOPMENT.md  Makefile  NOTICE  README.md  client.go  client_test.go  (+31 more)
sdk/python/: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
sdk/python/src/cq/: __init__.py  _util.py  client.py  models.py  scoring.py  store.py  ttl.py
sdk/python/src/cq/discovery/: __init__.py  _cache.py  _paths.py  _resolver.py  _types.py  _validate.py
sdk/python/src/cq/prompts/: SKILL.md  __init__.py  reflect.md
sdk/python/src/cq/protocol/: SKILL.md  __init__.py
sdk/python/src/cq/stores/: __init__.py  memory.py  postgres.py
sdk/python/tests/: conformance.py  conftest.py  test_client.py  test_discovery.py  test_discovery_cache.py  test_discovery_paths.py  test_models.py  test_prompts.py  test_schema_oracle.py  test_scoring.py  test_store.py  test_store_conformance.py  test_store_postgres_conformance.py  test_ttl.py  test_util.py
sdk/python/tests/testdata/: README.md  go_flagged_unit.json  go_unit.json  ku_002.json  ku_003.json  ku_004.json  ku_005.json  ku_006.json  ku_007.json  ku_008.json  ku_009.json  ku_010.json  ku_011.json  ku_012.json  python_flagged_unit.json  python_real_unit.json  python_team_confirmed.json  python_unit.json
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
team-api/: Dockerfile  pyproject.toml
team-ui/: index.html
(+270 files in other folders)
