[project]
name = "cq-install"
version = "0.1.0"
description = "Multi-host installer for the cq plugin (OpenCode, Cursor, Windsurf, Claude Code)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.urls]
Homepage = "https://github.com/mozilla-ai/cq"
Repository = "https://github.com/mozilla-ai/cq"
Issues = "https://github.com/mozilla-ai/cq/issues"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
]

lint = [
    "pre-commit>=4.5.1",
]

tests = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=48"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
