[project]
name = "cq-sdk"
version = "0.0.0.dev0"
description = "Python SDK for cq — shared agent knowledge commons"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "cq-schema>=0.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3.4,<4"]

[project.urls]
Homepage = "https://github.com/mozilla-ai/cq"
Repository = "https://github.com/mozilla-ai/cq"
Issues = "https://github.com/mozilla-ai/cq/issues"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
]

lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "ty>=0.0.59",
]

tests = [
    "jsonschema>=4.23.0",
    "pytest>=9.0.2",
]

# For local in-repo development before publishing a new schema release,
# uncomment the source override below. To revert to PyPI, comment it
# back out and run: uv lock --refresh-package cq-schema
# [tool.uv.sources]
# cq-schema = { path = "../../schema/python", editable = true }

[build-system]
requires = ["setuptools>=48"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed"]
"cq.prompts" = ["SKILL.md", "reflect.md", "status.md"]

# Dynamic versioning via setuptools_scm is configured in the release
# workflow. The tag pattern is sdk/python/X.Y.Z. During development,
# the static version above is used.
# [tool.setuptools_scm]
# root = "../.."
# tag_regex = "^sdk/python/(?P<version>.+)$"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
cq-schema = "0 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
